# hotbox

./: .gitignore  LICENSE  Makefile  Makefile~  README.md  config.mk  config.mk.template  config.yaml  config.yaml.template  export_third_party.py  google_analytics.js  hotbox-vm.IAB  hotbox-vm.IAD  hotbox-vm.IMB  hotbox-vm.IMD  hotbox-vm.PFI  hotbox-vm.PO  hotbox-vm.PR  hotbox-vm.PRI  hotbox-vm.PS  hotbox-vm.WK3  index.html  install_third_party.py  log  spark_exp_server
css/: creative.css  hotbox.css
db_testbed/test_db_root/: DB_root_file
experiment/: MultinomialLogisticRegression.java
experiment/criteo/: process_libsvm.c
experiment/kddbfe/: KddbFeEx.scala  genFeature.py
experiment/mlr.cass/: Makefile  README.md
experiment/py_wrapper/: CMakeLists.txt  predict.py  py_client.cpp  py_client.hpp  py_hb_client.cpp  py_session.cpp  py_session.hpp  test_py_client.py
experiment/spark_exp/: Poly.scala  spark_exp.proto
experiment/test_python/: CMakeLists.txt  test.cpp
experiment/tf/: Makefile  dnn.py  test.py
experiment/zmq/: Client.c  README  Server.c
python/db/: db_client.py  db_client2.py  db_client3.py  hb_client.py  ingest.py  ingest2.py
python/test/: zmq_test.py
python/util/: conf_generator.py  dnn_transform.py  modularize.py
script/: count_line.py  cpplint.py  kill.py  lint.py  run_db_server.py  run_hotbox_client.py  run_hotbox_client_cache.py  run_hotbox_mtt.py  run_mldb_client.py  run_proxy_server.py  run_stats_client.py  run_warp_client.py  run_warp_server.py
src/client/: MPMCQueue.hpp  client.cpp  client.hpp  data_iterator.cpp  data_iterator.hpp  data_iterator.hpp~  data_iterator_if.hpp  hb_client.cpp  hb_client.hpp  hb_proxy_client.hpp  mldb_client.hpp  mt_transformer.cpp  mt_transformer.hpp  proxy_data_iterator.cpp  proxy_data_iterator.hpp  proxy_server.cpp  proxy_server.hpp  session.cpp  session.hpp  session.hpp~  session_options.hpp  status.hpp
src/db/: db.cpp  db.hpp  (+9 more)
test/: test.mk
test/fm/: 1.hosts  CMakeLists.txt  Makefile  fm.cfg.template  hb_fm.cfg  hb_fm.cfg.template  iterparallel.py  run_hotbox_client.py
test/fm/src/: adarev_table.hpp  class_loss.hpp  common.hpp  data.hpp  data_util.cpp  data_util.hpp  fm_work_partition.hpp  ftrl_adarev_table.hpp  hotbox_client_main.cpp  main.bak  metafile_reader.cpp  metafile_reader.hpp  sgd_driver.hpp  sparse_vec.hpp  timer.cpp  timer.hpp  util.hpp
(+250 files in other folders)
